setup HTTPS support

--- a/SRC/Warehouse.API/appsettings.json
+++ b/SRC/Warehouse.API/appsettings.json
@@ -1,9 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Kestrel": {
+        "Endpoints": {
+            "HttpsInlineCertAndKeyFile": {
+                "Url": "https://localhost:1986",
+                "Certificate": {
+                    "Path": "Cert/certificate.crt",
+                    "KeyPath": "Cert/private.key"
+                }
+            }
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
