--- a/SRC/Warehouse.API/appsettings.json
+++ b/SRC/Warehouse.API/appsettings.json
@@ -9,7 +9,7 @@
     "Kestrel": {
         "Endpoints": {
             "HttpsInlineCertAndKeyFile": {
-                "Url": "https://localhost:1986",
+                "Url": "https://0.0.0.0:1986",
                 "Certificate": {
                     "Path": "Cert/certificate.crt",
                     "KeyPath": "Cert/private.key"
