--- a/SRC/Warehouse.API/appsettings.json
+++ b/SRC/Warehouse.API/appsettings.json
@@ -6,16 +6,5 @@
             "Microsoft.AspNetCore.DataProtection": "None"
         }
     },
-    "AllowedHosts": "*",
-    "Kestrel": {
-        "Endpoints": {
-            "HttpsInlineCertAndKeyFile": {
-                "Url": "https://0.0.0.0:1986",
-                "Certificate": {
-                    "Path": "Cert/certificate.crt",
-                    "KeyPath": "Cert/private.key"
-                }
-            }
-        }
-    }
+    "AllowedHosts": "*"
 }
