--- a/Tools/LocalStack/LocalStack.Setup.csproj
+++ b/Tools/LocalStack/LocalStack.Setup.csproj
@@ -12,4 +12,13 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Cert\certificate.crt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Cert\private.key">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
