--- a/Tools/LocalStack/dockerfile
+++ b/Tools/LocalStack/dockerfile
@@ -5,15 +5,16 @@ ENV DOTNET_NOLOGO=true
 ENV DOTNET_CLI_TELEMETRY_OPTOUT=true
 
 COPY LocalStack.Setup.csproj Program.cs .
+COPY Cert ./Cert/
 
-RUN dotnet build LocalStack.Setup.csproj -o ./bin
+RUN dotnet build LocalStack.Setup.csproj -o ./bin 
 
 # ---------------------------------------------------
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS base
 WORKDIR /app
 
-COPY --from=build /build/bin .
+COPY --from=build build/bin .
 
 ENV DOTNET_NOLOGO=true
 ENV DOTNET_CLI_TELEMETRY_OPTOUT=true
