--- a/SRC/Warehouse.API/Warehouse.API.csproj
+++ b/SRC/Warehouse.API/Warehouse.API.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <Configurations>Debug;Release</Configurations>
     <OutputPath>..\..\BIN\$(Configuration)</OutputPath>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>13</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
