--- a/SRC/App/dockerfile
+++ b/SRC/App/dockerfile
@@ -1,5 +1,3 @@
-# syntax=docker.io/docker/dockerfile:1.7-labs
-
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /build
 
@@ -8,7 +6,7 @@ ARG CONFIG
 ENV DOTNET_NOLOGO=true
 ENV DOTNET_CLI_TELEMETRY_OPTOUT=true
 
-COPY --exclude=Tools SRC .
+COPY . .
 
 RUN dotnet build Warehouse.API/Warehouse.API.csproj -c $CONFIG -o ./bin
 
