--- a/SRC/Tools/LocalStack/dockerfile
+++ b/SRC/Tools/LocalStack/dockerfile
@@ -1,17 +1,16 @@
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /build
 
 ENV DOTNET_NOLOGO=true
 ENV DOTNET_CLI_TELEMETRY_OPTOUT=true
 
-COPY LocalStack.Setup.csproj Program.cs .
-COPY Cert ./Cert/
+COPY . .
 
 RUN dotnet build LocalStack.Setup.csproj -o ./bin 
 
 # ---------------------------------------------------
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS base
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS base
 WORKDIR /app
 
 COPY --from=build build/bin .
