--- a/SRC/App/Warehouse.API/Warehouse.API.csproj
+++ b/SRC/App/Warehouse.API/Warehouse.API.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
     <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.58" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
   </ItemGroup>
 
 </Project>
