--- a/SRC/App/Warehouse.API/appsettings.json
+++ b/SRC/App/Warehouse.API/appsettings.json
@@ -1,10 +1,19 @@
 {
-    "Logging": {
-        "LogLevel": {
+    "Serilog": {
+        "MinimumLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning",
-            "Microsoft.AspNetCore.DataProtection": "None"
-        }
+            "Override": {
+                "Microsoft": "Information",
+                "Microsoft.AspNetCore.Hosting.Diagnostics": "Information",
+                "Microsoft.Hosting.Lifetime": "Information"
+            }
+        },
+        "WriteTo": [{
+            "Name": "Console",
+            "Args": {
+                "outputTemplate": "{Timestamp:HH:mm:ss} [{Level}] {Message}{NewLine}{Properties}{NewLine}"
+            }
+        }]
     },
     "AllowedHosts": "*"
 }
