--- a/SRC/App/Warehouse.API/appsettings.Development.json
+++ b/SRC/App/Warehouse.API/appsettings.Development.json
@@ -1,22 +1,6 @@
 {
-    "Serilog": {
-        "MinimumLevel": {
-            "Default": "Information",
-            "Override": {
-                "Microsoft": "Information",
-                "Microsoft.AspNetCore.Hosting.Diagnostics": "Information",
-                "Microsoft.Hosting.Lifetime": "Information"
-            }
-        },
-        "WriteTo": [{
-            "Name": "Console",
-            "Args": {
-                "outputTemplate": "{Timestamp:HH:mm:ss} [{Level}] {Message}{NewLine}{Properties}{NewLine}"
-            }
-        }]
-    },
-    "AllowedHosts": "*",
     "AWS": {
         "ServiceURL": "http://localstack:4566"
-    }
+    },
+    "Prefix": "local"
 }
