--- a/SRC/App/Warehouse.API/appsettings.json
+++ b/SRC/App/Warehouse.API/appsettings.json
@@ -8,12 +8,18 @@
                 "Microsoft.Hosting.Lifetime": "Information"
             }
         },
-        "WriteTo": [{
-            "Name": "Console",
-            "Args": {
-                "outputTemplate": "{Timestamp:HH:mm:ss} [{Level}] {Message}{NewLine}{Properties}{NewLine}"
+        "WriteTo": [
+            {
+                "Name": "Console",
+                "Args": {
+                    "outputTemplate": "{Timestamp:HH:mm:ss} [{Level}] {Message}{NewLine}{Properties}{NewLine}"
+                }
             }
-        }]
+        ]
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ApiPort": 1986,
+    "AuthenticationHanlder": {
+        "CacheExpirationMinutes": 30
+    }
 }
