assign users to groups

--- a/SRC/Tools/LocalStack/LocalStack.Setup.csproj
+++ b/SRC/Tools/LocalStack/LocalStack.Setup.csproj
@@ -26,6 +26,9 @@
     <None Update="Cert\private.key">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="users.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
