--- a/SRC/App/Warehouse.API/appsettings.json
+++ b/SRC/App/Warehouse.API/appsettings.json
@@ -20,6 +20,15 @@
     "AllowedHosts": "*",
     "ApiPort": 1986,
     "AuthenticationHanlder": {
-        "CacheExpirationMinutes": 30
+        "CacheExpirationMinutes": 30,
+        "GroupRoles": {
+            "Admins": {
+                "Includes": [ "Users" ],
+                "Roles": [ "Admin" ]
+            },
+            "Users": {
+                "Roles": [ "User" ]
+            }
+        }
     }
 }
