--- a/SRC/App/Warehouse.API/appsettings.json
+++ b/SRC/App/Warehouse.API/appsettings.json
@@ -27,5 +27,14 @@
                 "Roles": [ "User" ]
             }
         }
+    },
+    "Swagger": {
+        "Version": "v1",
+        "Title": "Warehouse API",
+        "Description": "Warehouse management API",
+        "Contact":{
+            "Name": "Denes Solti",
+            "Email": "sodnaatx@gmail.com"
+        }
     }
 }
