--- a/SRC/App/Warehouse.API/Warehouse.API.csproj
+++ b/SRC/App/Warehouse.API/Warehouse.API.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.58" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
   </ItemGroup>
 
 </Project>
