--- a/SRC/App/Warehouse.API/appsettings.Development.json
+++ b/SRC/App/Warehouse.API/appsettings.Development.json
@@ -2,5 +2,8 @@
     "AWS": {
         "ServiceURL": "http://localstack:4566"
     },
-    "Prefix": "local"
+    "Prefix": "local",
+    "LoginController": {
+        "AppDomain":  "localhost:1986"
+    }
 }
