introduce CookieAuthenticationHandler & JwtService classes

--- a/SRC/App/Warehouse.API/appsettings.json
+++ b/SRC/App/Warehouse.API/appsettings.json
@@ -16,8 +16,7 @@
     },
     "AllowedHosts": "*",
     "ApiPort": 1986,
-    "AuthenticationHanlder": {
-        "CacheExpirationMinutes": 30,
+    "Auth": {
         "GroupRoles": {
             "Admins": {
                 "Includes": [ "Users" ],
@@ -26,7 +25,9 @@
             "Users": {
                 "Roles": [ "User" ]
             }
-        }
+        },
+        "SessionExpirationMinutes": 1440,
+        "SessionCookieName": "warehouse-session"
     },
     "Swagger": {
         "Version": "v1",
