implement the upgrade logic

--- a/SRC/Tools/DbMigrator/DbMigrator.csproj
+++ b/SRC/Tools/DbMigrator/DbMigrator.csproj
@@ -19,7 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Evaluations\" />
+    <None Update="Evaluations\00-CharSet.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
