--- a/SRC/Tools/DbMigrator/DbMigrator.csproj
+++ b/SRC/Tools/DbMigrator/DbMigrator.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <None Remove=".dockerignore" />
     <None Remove="dockerfile" />
+    <None Remove="README.md" />
   </ItemGroup>
 
   <ItemGroup>
