--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,21 +37,25 @@ services:
       - AWS_DEFAULT_REGION=us-west-2
       - AWS_ACCESS_KEY_ID=local
       - AWS_SECRET_ACCESS_KEY=local
-  # api:
-  #   depends_on:
-  #     localstack-setup:
-  #       condition: service_completed_successfully
-  #   restart: always
-  #   build:
-  #     context: ./SRC/App
-  #     dockerfile: ./dockerfile
-  #     args:
-  #       - CONFIG=Debug
-  #   ports:
-  #     - 1986:1986
-  #   environment:
-  #     - ASPNETCORE_ENVIRONMENT=Development
-  #     - AWS_ENDPOINT_URL=http://localstack:4566
-  #     - AWS_DEFAULT_REGION=us-west-2
-  #     - AWS_ACCESS_KEY_ID=local
-  #     - AWS_SECRET_ACCESS_KEY=local
+      - 'DB_SECRET={"Endpoint": "aurora", "Database": "WarehouseDb", "Password": "kerekesfacapa", "UserName": "root"}'
+      - JWT_SECRET=very-very-very-very-very-very-very-secret-key
+  api:
+    depends_on:
+      localstack-setup:
+        condition: service_completed_successfully
+      db-migrator:
+        condition: service_completed_successfully
+    restart: always
+    build:
+      context: ./SRC/App
+      dockerfile: ./dockerfile
+      args:
+        - CONFIG=Debug
+    ports:
+      - 1986:1986
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - AWS_ENDPOINT_URL=http://localstack:4566
+      - AWS_DEFAULT_REGION=us-west-2
+      - AWS_ACCESS_KEY_ID=local
+      - AWS_SECRET_ACCESS_KEY=local
