--- a/SRC/App/Warehouse.DAL/Warehouse.DAL.csproj
+++ b/SRC/App/Warehouse.DAL/Warehouse.DAL.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ServiceStack.OrmLite.MySql" Version="8.5.2" />
+    <PackageReference Include="ServiceStack.OrmLite" Version="8.5.2" />
   </ItemGroup>
 
 </Project>
