init group-role relations

--- a/SRC/Tools/DbMigrator/DbMigrator.csproj
+++ b/SRC/Tools/DbMigrator/DbMigrator.csproj
@@ -26,6 +26,9 @@
     <None Update="Evolutions\01-Auth.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Evolutions\02-GroupRoles.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
