--- a/SRC/Tools/LocalStack/LocalStack.Setup.csproj
+++ b/SRC/Tools/LocalStack/LocalStack.Setup.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Configurations>Debug;Release</Configurations>
+    <Configurations>Debug</Configurations>
     <OutputPath>..\..\..\BIN\$(Configuration)</OutputPath>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
