log SQL queries in dev mode

--- a/SRC/App/Warehouse.API/appsettings.Development.json
+++ b/SRC/App/Warehouse.API/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
     "Prefix": "local",
-    "AppDomain": "localhost:1986"
+    "AppDomain": "localhost:1986",
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Debug"
+        }
+    }
 }
