--- a/SRC/App/Warehouse.API/Warehouse.API.csproj
+++ b/SRC/App/Warehouse.API/Warehouse.API.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\Warehouse.DAL\Warehouse.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute" Condition="'$(Configuration)'=='Debug'">
+      <_Parameter1>Warehouse.API.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+    
 </Project>
