--- a/TESTS/Warehouse.Tests.Server/Warehouse.Tests.Server.csproj
+++ b/TESTS/Warehouse.Tests.Server/Warehouse.Tests.Server.csproj
@@ -10,7 +10,7 @@
       <Optimize>false</Optimize>
       <AnalysisMode>AllEnabledByDefault</AnalysisMode>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-      <NoWarn>CA1515</NoWarn>
+      <NoWarn>CA1062;CA1515</NoWarn>
   </PropertyGroup>
 
 </Project>
