--- a/TESTS/Warehouse.API.Tests/Warehouse.API.Tests.csproj
+++ b/TESTS/Warehouse.API.Tests/Warehouse.API.Tests.csproj
@@ -5,7 +5,7 @@
     <PropertyGroup>
         <AssemblyName>Warehouse.API.Tests</AssemblyName>
         <RootNamespace>Warehouse.API.Tests</RootNamespace>
-        <NoWarn>CA1515;CA1822;CA1859;CA2000;CA2007;CA2201;CA2234</NoWarn>
+        <NoWarn>CA1515;CA1822;CA1859;CA2000;CA2007;CA2201;CA2234;SYSLIB0026</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
