--- a/TESTS/Warehouse.Host.Tests/Warehouse.Host.Tests.csproj
+++ b/TESTS/Warehouse.Host.Tests/Warehouse.Host.Tests.csproj
@@ -3,8 +3,8 @@
     <Import Project="..\Common.targets" />
 
     <PropertyGroup>
-        <AssemblyName>Warehouse.API.Tests</AssemblyName>
-        <RootNamespace>Warehouse.API.Tests</RootNamespace>
+        <AssemblyName>Warehouse.Host.Tests</AssemblyName>
+        <RootNamespace>Warehouse.Host.Tests</RootNamespace>
         <NoWarn>CA1515;CA1822;CA1859;CA2000;CA2007;CA2201;CA2234;SYSLIB0026</NoWarn>
     </PropertyGroup>
 
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\SRC\App\Warehouse.API\Warehouse.API.csproj" />
+      <ProjectReference Include="..\..\SRC\App\Warehouse.Host\Warehouse.Host.csproj" />
       <ProjectReference Include="..\Warehouse.Tests.Server\Warehouse.Tests.Server.csproj" />
     </ItemGroup>
 
