--- a/SRC/App/Warehouse.DAL/Warehouse.DAL.csproj
+++ b/SRC/App/Warehouse.DAL/Warehouse.DAL.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+      <AssemblyName>Warehouse.DAL</AssemblyName>
+      <RootNamespace>Warehouse.DAL</RootNamespace>
       <Configurations>Debug;Release</Configurations>
       <OutputPath>..\..\..\BIN\$(Configuration)</OutputPath>
       <TargetFramework>net9.0</TargetFramework>
