--- a/SRC/App/Warehouse.Host/Warehouse.Host.csproj
+++ b/SRC/App/Warehouse.Host/Warehouse.Host.csproj
@@ -1,13 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
+    
+  <Import Project="..\Common.targets" />
+    
   <PropertyGroup>
     <AssemblyName>Warehouse.Host</AssemblyName>
     <RootNamespace>Warehouse.Host</RootNamespace>
-    <Configurations>Debug;Release</Configurations>
-    <OutputPath>..\..\..\BIN\$(Configuration)</OutputPath>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <LangVersion>13</LangVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
