introduce Warehouse.Core module

--- a/SRC/App/Warehouse.DAL/Warehouse.DAL.csproj
+++ b/SRC/App/Warehouse.DAL/Warehouse.DAL.csproj
@@ -17,4 +17,8 @@
     </AssemblyAttribute>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Warehouse.Core\Warehouse.Core.csproj" />
+  </ItemGroup>
+
 </Project>
