--- a/SRC/App/Warehouse.API/Warehouse.API.csproj
+++ b/SRC/App/Warehouse.API/Warehouse.API.csproj
@@ -21,7 +21,7 @@
     
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute" Condition="'$(Configuration)'=='Debug'">
-      <_Parameter1>Warehouse.Host.Tests</_Parameter1>
+      <_Parameter1>Warehouse.API.Tests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
 </Project>
