--- a/SRC/Tools/DbMigrator/dockerfile
+++ b/SRC/Tools/DbMigrator/dockerfile
@@ -18,4 +18,4 @@ COPY --from=build build/bin .
 ENV DOTNET_NOLOGO=true
 ENV DOTNET_CLI_TELEMETRY_OPTOUT=true
 
-ENTRYPOINT ["dotnet", "DbMigrator.dll"]
+ENTRYPOINT ["dotnet", "Warehouse.Tools.DbMigrator.dll"]
