--- a/SRC/Tools/LocalStackSetup/dockerfile
+++ b/SRC/Tools/LocalStackSetup/dockerfile
@@ -6,7 +6,7 @@ ENV DOTNET_CLI_TELEMETRY_OPTOUT=true
 
 COPY . .
 
-RUN dotnet build LocalStack.Setup.csproj -o ./bin 
+RUN dotnet build LocalStackSetup.csproj -o ./bin 
 
 # ---------------------------------------------------
 
@@ -18,4 +18,4 @@ COPY --from=build build/bin .
 ENV DOTNET_NOLOGO=true
 ENV DOTNET_CLI_TELEMETRY_OPTOUT=true
 
-ENTRYPOINT ["dotnet", "LocalStack.Setup.dll"]
+ENTRYPOINT ["dotnet", "Warehouse.Tools.LocalStackSetup.dll"]
