--- a/SRC/App/Common.targets
+++ b/SRC/App/Common.targets
@@ -1,10 +1,24 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
+        <Authors>Denes Solti</Authors>
+        <Version>0.0.0</Version>
         <Configurations>Debug;Release</Configurations>
         <OutputPath>..\..\..\BIN\$(Configuration)</OutputPath>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <LangVersion>13</LangVersion>
+        <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <NoWarn>CA1019;CA1032;CA1034;CA1716;CA1720;CA1724;CA1727;CA1848;CA1859;CA1869;CA2007</NoWarn>
+        <NuGetAudit>true</NuGetAudit>
+        <NuGetAuditLevel>moderate</NuGetAuditLevel>
+        <NuGetAuditMode>all</NuGetAuditMode>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.*">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
 </Project>
