add Common.targets for tools, enable all analyzers & NuGet audit

--- a/SRC/Tools/LocalStackSetup/LocalStackSetup.csproj
+++ b/SRC/Tools/LocalStackSetup/LocalStackSetup.csproj
@@ -1,20 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\Common.targets" />
 
   <PropertyGroup>
     <AssemblyName>Warehouse.Tools.LocalStackSetup</AssemblyName>
     <RootNamespace>Warehouse.Tools.LocalStackSetup</RootNamespace>
-    <OutputType>Exe</OutputType>
     <Configurations>Debug</Configurations>
-    <OutputPath>..\..\..\BIN\$(Configuration)</OutputPath>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove=".dockerignore" />
-    <None Remove="dockerfile" />
-    <None Remove="README.md" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.58" />
