--- a/SRC/Tools/LocalStackSetup/LocalStackSetup.csproj
+++ b/SRC/Tools/LocalStackSetup/LocalStackSetup.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.58" />
+    <PackageReference Include="AWSSDK.CertificateManager" Version="3.7.400.68" />
+    <PackageReference Include="AWSSDK.ResourceGroupsTaggingAPI" Version="3.7.400.68" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.68" />
   </ItemGroup>
 
   <ItemGroup>
