Create-Certs.ps1 II

--- a/SRC/Tools/LocalStackSetup/LocalStackSetup.csproj
+++ b/SRC/Tools/LocalStackSetup/LocalStackSetup.csproj
@@ -14,10 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Cert\certificate.crt">
+    <None Update="Cert\client.crt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Cert\private.key">
+    <None Update="Cert\client.key">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
