--- a/SRC/App/Common.targets
+++ b/SRC/App/Common.targets
@@ -9,7 +9,7 @@
         <LangVersion>13</LangVersion>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-        <NoWarn>CA1019;CA1032;CA1034;CA1716;CA1720;CA1724;CA1727;CA1848;CA1859;CA1869;CA2007</NoWarn>
+        <NoWarn>CA1019;CA1032;CA1034;CA1716;CA1720;CA1724;CA1727;CA1812;CA1848;CA1859;CA1869;CA2007</NoWarn>
         <NuGetAudit>true</NuGetAudit>
         <NuGetAuditLevel>moderate</NuGetAuditLevel>
         <NuGetAuditMode>all</NuGetAuditMode>
