turn DbMigrator into lambda I

--- a/SRC/Tools/DbMigrator/DbMigrator.csproj
+++ b/SRC/Tools/DbMigrator/DbMigrator.csproj
@@ -5,9 +5,13 @@
     <AssemblyName>Warehouse.Tools.DbMigrator</AssemblyName>
     <RootNamespace>Warehouse.Tools.DbMigrator</RootNamespace>
     <Configurations>Debug;Release</Configurations>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+    <AWSProjectType>Lambda</AWSProjectType>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.Core" Version="2.5.0" />
+    <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
     <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.62" />
     <PackageReference Include="dbup-mysql" Version="6.0.4" />
   </ItemGroup>
