--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,6 @@ services:
       MYSQL_ROOT_PASSWORD: kerekesfacapa
     ports:
       - 3306:3306
-  db-migrator:
-    depends_on:
-      aurora:
-        condition: service_started
-      localstack-setup:
-        condition: service_completed_successfully
-    build:
-      context: ./SRC/Tools
-      dockerfile: ./dockerfile-dbmigrator
-    environment:
-      - AWS_ENDPOINT_URL=http://localstack:4566
-      - AWS_REGION=local
-      - AWS_ACCESS_KEY_ID=local
-      - AWS_SECRET_ACCESS_KEY=local
-      - PREFIX=local
   localstack:
     image: localstack/localstack:4.0.3
     restart: always
@@ -33,9 +18,7 @@ services:
   localstack-setup:
     depends_on:
       - localstack
-    build:
-      context: ./SRC/Tools
-      dockerfile: ./dockerfile-localstacksetup
+    build: ./SRC/Tools/LocalStackSetup
     environment:
       - AWS_ENDPOINT_URL=http://localstack:4566
       - AWS_REGION=local
@@ -47,8 +30,6 @@ services:
   api:
     depends_on:
       localstack-setup:
-        condition: service_completed_successfully
-      db-migrator:
         condition: service_completed_successfully
     restart: always
     build:
