do not hardcode package patch versions

--- a/SRC/App/Warehouse.Host/Warehouse.Host.csproj
+++ b/SRC/App/Warehouse.Host/Warehouse.Host.csproj
@@ -9,14 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
-    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.68" />
-    <PackageReference Include="MySqlConnector" Version="2.4.0" />
-    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
-    <PackageReference Include="ServiceStack.Logging.Serilog" Version="8.5.2" />
-    <PackageReference Include="ServiceStack.OrmLite.MySqlConnector" Version="8.5.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.*" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.*" />
+    <PackageReference Include="MySqlConnector" Version="2.4.*" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.*" />
+    <PackageReference Include="ServiceStack.Logging.Serilog" Version="8.5.*" />
+    <PackageReference Include="ServiceStack.OrmLite.MySqlConnector" Version="8.5.*" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.*" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.*" />
   </ItemGroup>
 
   <ItemGroup>
