--- a/SRC/App/Warehouse.Core/Warehouse.Core.csproj
+++ b/SRC/App/Warehouse.Core/Warehouse.Core.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.3.0" />
-    <PackageReference Include="Microsoft.OpenApi" Version="1.6.22" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.3.*" />
+    <PackageReference Include="Microsoft.OpenApi" Version="1.6.*" />
   </ItemGroup>
 
 </Project>
