--- a/SRC/App/Warehouse.DAL/Warehouse.DAL.csproj
+++ b/SRC/App/Warehouse.DAL/Warehouse.DAL.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
-    <PackageReference Include="ServiceStack.OrmLite" Version="8.5.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.*" />
+    <PackageReference Include="ServiceStack.OrmLite" Version="8.5.*" />
   </ItemGroup>
 
   <ItemGroup>
