--- a/SRC/Tools/DbMigrator/DbMigrator.csproj
+++ b/SRC/Tools/DbMigrator/DbMigrator.csproj
@@ -12,10 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Amazon.Lambda.Core" Version="2.5.0" />
-    <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
-    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.62" />
-    <PackageReference Include="dbup-mysql" Version="6.0.4" />
+    <PackageReference Include="Amazon.Lambda.Core" Version="2.5.*" />
+    <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.*" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.*" />
+    <PackageReference Include="dbup-mysql" Version="6.0.*" />
   </ItemGroup>
 
   <ItemGroup>
