--- a/SRC/Tools/LocalStackSetup/LocalStackSetup.csproj
+++ b/SRC/Tools/LocalStackSetup/LocalStackSetup.csproj
@@ -14,9 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Lambda" Version="3.7.411.13" />
-    <PackageReference Include="AWSSDK.ResourceGroupsTaggingAPI" Version="3.7.400.68" />
-    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.68" />
+    <PackageReference Include="AWSSDK.Lambda" Version="3.7.*" />
+    <PackageReference Include="AWSSDK.ResourceGroupsTaggingAPI" Version="3.7.*" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.*" />
   </ItemGroup>
 
   <ItemGroup>
