--- a/TESTS/Warehouse.API.Tests/Warehouse.API.Tests.csproj
+++ b/TESTS/Warehouse.API.Tests/Warehouse.API.Tests.csproj
@@ -9,8 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.0" />
-      <PackageReference Include="ServiceStack.OrmLite.Sqlite.Data" Version="8.5.2" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.*" />
+      <PackageReference Include="ServiceStack.OrmLite.Sqlite.Data" Version="8.5.*" />
     </ItemGroup>
 
     <ItemGroup>
