--- a/TESTS/Warehouse.Host.Tests/Warehouse.Host.Tests.csproj
+++ b/TESTS/Warehouse.Host.Tests/Warehouse.Host.Tests.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.*" />
     </ItemGroup>
 
     <ItemGroup>
