--- a/SRC/App/Warehouse.Core/Warehouse.Core.csproj
+++ b/SRC/App/Warehouse.Core/Warehouse.Core.csproj
@@ -12,7 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.3.*" />
-    <PackageReference Include="Microsoft.OpenApi" Version="1.6.*" />
+    <!-- [12.30.2024] use exact version as the latest (v1.6.23) one is bugous -->
+    <PackageReference Include="Microsoft.OpenApi" Version="1.6.22" />
   </ItemGroup>
 
 </Project>
