--- a/SRC/App/Warehouse.API/Warehouse.API.csproj
+++ b/SRC/App/Warehouse.API/Warehouse.API.csproj
@@ -4,6 +4,7 @@
   <PropertyGroup>
     <AssemblyName>Warehouse.API</AssemblyName>
     <RootNamespace>Warehouse.API</RootNamespace>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.*" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.*" />
   </ItemGroup>
     
   <ItemGroup>
