--- a/SRC/App/Warehouse.Host/Warehouse.Host.csproj
+++ b/SRC/App/Warehouse.Host/Warehouse.Host.csproj
@@ -5,7 +5,6 @@
   <PropertyGroup>
     <AssemblyName>Warehouse.Host</AssemblyName>
     <RootNamespace>Warehouse.Host</RootNamespace>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +15,7 @@
     <PackageReference Include="ServiceStack.Logging.Serilog" Version="8.5.*" />
     <PackageReference Include="ServiceStack.OrmLite.MySqlConnector" Version="8.5.*" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.*" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.*" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.*" />
   </ItemGroup>
 
