--- a/SRC/App/Warehouse.Host/appsettings.json
+++ b/SRC/App/Warehouse.Host/appsettings.json
@@ -9,7 +9,7 @@
             {
                 "Name": "Console",
                 "Args": {
-                    "outputTemplate": "{Timestamp:HH:mm:ss} [{Level}] {Message}{NewLine}{Properties}{NewLine}"
+                    "outputTemplate": "[{Timestamp:HH:mm:ss} {Level}] {Message:l}{NewLine}{Properties:j}{NewLine}"
                 }
             }
         ]
